restructure repository and rewrite README in English
Layout
------
Hardware work was scattered across four top-level directories (rtl/, tb/, model/,
syn/); it is now one hardware/ tree with those as subdirectories. Process and
investigation documents were piling up in the repository root under doc/ with Chinese
filenames; they now live under docs/design/ and docs/reports/ with ASCII kebab-case
names. Nothing was deleted, only moved and renamed.

  rtl/ tb/ model/ syn/  ->  hardware/{rtl,tb,model,syn}/
  doc/现状与后续计划.md  ->  docs/design/status-and-roadmap.md
  doc/STATUS.md         ->  docs/design/development-log.md
  doc/*报告.md          ->  docs/reports/{level-a-b,rtl-review,...}.md

Path references
---------------
Two classes of reference needed fixing, and the second was easy to miss: textual
paths in comments and docs, and *runtime* path computation. The latter includes
CMake's ${CMAKE_CURRENT_SOURCE_DIR}/rtl/..., "$ROOT/tb/cocotb" in shell, and
Path(__file__).parents[N] in Python. Since hardware/ adds a level while vectors/
stays at the repository root, the cocotb testbenches and the reference model now
distinguish the two explicitly (HW vs REPO) instead of deriving both from one root.

The .gitignore was also caught by the mechanical rewrite: vectors/rtl/ became
vectors/hardware/rtl/, which would have let generated vectors be committed. It has
been rewritten from scratch, grouped and commented, and verified with a negative
control - every generated artefact path confirmed ignored via git check-ignore.

READMEs
-------
The top-level README is rewritten in English as a proper project entry point:
overview, architecture diagram, key hierarchy, the hardware seam, features,
repository layout, build and test instructions, demos, security model, testing
summary, roadmap, licence. Tone is descriptive rather than conversational.

The security section states plainly what this is not: the boundary is a process
address space; the key derivation root is a stub whose literal 